# NetworkDemo

./: Network.pro  README.md
QtNetworkWrapper/: CMakeLists.txt  conanfile.py
QtNetworkWrapper/include/: QtNetworkWrapper.h
QtNetworkWrapper/src/: QtNetworkWrapper.cpp
QtNetworkWrapper/test_package/: CMakeLists.txt  conanfile.py
QtNetworkWrapper/test_package/src/: example.cpp
builder/: builder.pro
builder/Builder/: Builder.pro
demos/: demos.pro
demos/FileTransferDemo/: FileTransferDemo.pro
demos/FileTransferDemo/FileTransferClientDemo/: FileTransferClientDemo.pro
demos/FileTransferDemo/FileTransferClientDemo/cpp/: main.cpp
demos/FileTransferDemo/FileTransferServerDemo/: FileTransferServerDemo.pro
demos/FileTransferDemo/FileTransferServerDemo/cpp/: main.cpp  myserver.hpp
demos/LanNodeSearchDemo/: LanNodeSearchDemo.pro
demos/LanNodeSearchDemo/cpp/: main.cpp
demos/PingPongDemo/: PingPongDemo.pro
demos/PingPongDemo/PingDemo/: PingDemo.pro
demos/PingPongDemo/PingDemo/cpp/: main.cpp  ping.hpp
demos/PingPongDemo/PongDemo/: PongDemo.pro
demos/PingPongDemo/PongDemo/cpp/: main.cpp  pong.hpp
demos/UserLoginDemo/: UserLoginDemo.pro
demos/UserLoginDemo/UserLoginClientDemo/: UserLoginClientDemo.pro
demos/UserLoginDemo/UserLoginClientDemo/cpp/: main.cpp
demos/UserLoginDemo/UserLoginClientDemo/qml/: main.qml
demos/UserLoginDemo/UserLoginServerDemo/cpp/: main.cpp  myserver.hpp
src/: CMakeLists.txt  Network.pri
src/include/: client.h  clientforqml.h  connect.h  connectpool.h  foundation.h  lan.h  network.h  package.h  processor.h  server.h
src/qml/: NetworkQml.qrc
src/qml/Network/: NetworkClient.qml  qmldir
src/src/: client.cpp  clientforqml.cpp  connect.cpp  connectpool.cpp  foundation.cpp  lan.cpp  package.cpp  processor.cpp  server.cpp
tester/: tester.pro
tester/NetworkBenchmark/: NetworkBenchmark.pro
tester/NetworkBenchmark/cpp/: benchmark.cpp  benchmark.h  main.cpp
tester/NetworkOverallTest/: NetworkOverallTest.pro
tester/NetworkOverallTest/cpp/: fusiontest1.hpp  fusiontest2.hpp  main.cpp  overalltest.cpp  overalltest.h  processortest1.hpp  processortest2.hpp
tester/NetworkPersisteneTest/: NetworkPersisteneTest.pro
tester/NetworkPersisteneTest/cpp/: main.cpp  persistenetest.cpp  persistenetest.h
